--- a/lib/css/Product_Page.css
+++ b/lib/css/Product_Page.css
@@ -17,22 +17,20 @@ a:hover {
 body {
   min-width: 400px;
   overflow: auto;
-
 }
 
 header {
-  margin-top: 80px;
+  margin-top: 65px;
   display: flex;
   flex-direction: column;
 }
 @media screen and (max-width: 800px) {
   header {
-    margin-top: 60px;
+    margin-top: 40px;
   }
 }
-header main#product_main {
-  background-color: var(--primary-L);
-}
+/* header main#product_main {
+} */
 @media screen and (max-width: 800px) {
   header main#product_main {
     width: 100%;
@@ -50,11 +48,13 @@ header main#product_main section.main-box {
   }
 }
 header main#product_main section.main-box aside.asideNav {
+  background-color: var(--primary-L);
+
   width: 20%;
   display: flex;
   text-align: center;
   flex-direction: column;
-  margin-top: 75px;
+  padding-top: 75px;
 }
 
 @media screen and (max-width: 800px) {
@@ -93,7 +93,7 @@ header
   width: 50%;
 }
 
-@media screen and (max-width:800px) {
+@media screen and (max-width: 800px) {
   header
     main#product_main
     section.main-box
@@ -135,9 +135,7 @@ header main#product_main section.main-box section.middleContent {
   }
 }
 
-
 div.middle_box {
-  background-color: var(--primary-L);
   display: flex;
   width: 100%;
 }
@@ -219,7 +217,6 @@ header
   .vg-h3-div2
   div.box {
   margin: 10px;
-  
 }
 header
   main#product_main
@@ -278,7 +275,7 @@ header
   padding: 10px;
   color: rgb(0, 0, 0);
   width: 100%;
-  height: 900px;
+  height: 1150px;
 }
 @media screen and (max-width: 800px) {
   header
@@ -332,7 +329,6 @@ header
   div.middle_imgs {
   background-size: contain;
 }
-
 
 @media screen and (max-width: 800px) {
   header
@@ -502,7 +498,6 @@ h5 {
   flex-direction: column;
   justify-content: center;
   width: 400px;
-  height: 200px;
   border-radius: 14px;
   padding-left: 20px;
   background: #fbf9ed;
@@ -568,4 +563,10 @@ h5 {
   bottom: 20px;
   right: 190px;
   width: 150px;
+}
+/* .day {
+  display: inline;
+} */
+.day {
+  display: none;
 }
