--- a/views/product.ejs
+++ b/views/product.ejs
@@ -138,7 +138,7 @@
                         <option value="60d" data-size="l">家庭箱(60day)</option>
                       </select>
                       <span class="p-0 m-0 vg-p">
-                        總金額: <span class="toal price4">0</span>
+                        總金額: <span class="toal price4">0</span>元
                       </span>
                       <br />
                       <div class="day">
