--- a/lib/css/Product_Page.css
+++ b/lib/css/Product_Page.css
@@ -50,7 +50,7 @@ header main#product_main section.main-box {
 header main#product_main section.main-box aside.asideNav {
   background-color: var(--primary-L);
 
-  width: 20%;
+  width: 19%;
   display: flex;
   text-align: center;
   flex-direction: column;
@@ -399,8 +399,9 @@ div.mo_header {
   display: flex;
 }
 .clt {
-  border: var(--primary-2) solid 1px;
-  color: var(--primary-2);
+  border: var(--sc-g-Dark) solid 1px;
+  background-color: var(--sc-g-Dark);
+  color: white;
 }
 .fv_box h5 {
   border-bottom: 1px solid var(--primary-2);
@@ -412,8 +413,9 @@ h5.hoh5 {
   margin: 10px;
 }
 .f_1:hover {
-  color: var(--primary-2);
-  border: var(--primary-2) 1px solid;
+  border: var(--sc-g-Dark) solid 1px;
+  background-color: var(--sc-g-Dark);
+  color: white;
 }
 
 .f_1 {
