--- a/views/share/modal.ejs
+++ b/views/share/modal.ejs
@@ -654,7 +654,6 @@
         console.log("Response data:", responseData);
         // console.log(responseData[0].product);
         set(responseData);
-        openCity(event, "fu_tab7");
       })
       .catch((error) => {
         console.error("輸入錯誤", error);
@@ -671,6 +670,9 @@
   $(".go_shop").on("click", function () {
     showModalOnPage();
     openCity(event, "fu_tab7");
+    $(".tab").eq(6).addClass("action");
+
+    // action
     $("#dxING").modal("hide");
     $(".modal").hide();
     $(".modal-dialog").hide();
