--- a/views/m_order.ejs
+++ b/views/m_order.ejs
@@ -84,7 +84,7 @@
                   <p>份量: 1-2人</p>
                   <p>數量: 1</p>
                 </div>
-                <div class="col-2">
+                <div class="col-2 text-center">
                   <p>每周配送</p>
                 </div>
                 <div class="col-3 order-button">
