--- a/views/share/m_multF.ejs
+++ b/views/share/m_multF.ejs
@@ -1,9 +1,9 @@
 <div class="div-refer memb-multF">
     <!-- <div class="test">
       <h5 class="vg-h5 fw-semibold">蔬果曆</h5>
-    </div> -->
+    </div>
 
-    <!-- <div class="order-status">
+    <div class="order-status">
       <h5 class="vg-h5 fw-semibold">訂單狀態追蹤</h5>
       <div class="accordion accordion-flush" id="status">
         <div class="accordion-item">
@@ -54,9 +54,9 @@
           <div id="status-feedback" class="accordion-collapse collapse" aria-labelledby="non-feedback" data-bs-parent="#status">
             <div class="accordion-body">Placeholder content </div>
           </div>
-        </div> -->
+        </div>
 
-        <!-- <div class="accordion-item">
+        <div class="accordion-item">
           <h2 class="accordion-header" id="after-sale">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#status-AS" aria-expanded="false" aria-controls="status-AS">
               Accordion Item #3
@@ -66,7 +66,8 @@
           <div id="status-AS" class="accordion-collapse collapse" aria-labelledby="after-sale" data-bs-parent="#status">
             <div class="accordion-body">Placeholder content </div>
           </div>
+        </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
