--- a/views/share/head_link.ejs
+++ b/views/share/head_link.ejs
@@ -42,6 +42,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/Draggable.min.js"></script>
 
+<!-- Dayjs -->
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+
 <!-- VG -->
 <link rel="stylesheet" href="css/vg.css" />
 <script src="js/vg.js"></script>
